SymTab fixed getreturntype